plugins {
    id 'java'
}

version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.sparkjava:spark-core:2.9.3'
    implementation 'com.sparkjava:spark-template-handlebars:2.7.1'
    implementation 'ch.qos.logback:logback-classic:1.2.10'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

test {
    useJUnitPlatform()
}
